--- a/dapp/index.html
+++ b/dapp/index.html
@@ -56,14 +56,14 @@
           <div class="Auction_nounContentCol__1o5ER col-lg-6">
             <div class="Auction_nounWrapper__3JSNc"><img id="dog-image"
                 src="/images/dog336.png"
-                alt="Dog 0 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid"></div>
+                alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid"></div>
           </div>
           <div class="Auction_auctionActivityCol__3U2jw col-lg-6">
             <div>
               <div class="AuctionActivity_informationRow__2BOSj">
                 <div class="AuctionActivity_activityRow__1xuKY row">
                   <div class="col-lg-12">
-                    <h4 id="dog-date">Oct 06 2021</h4>
+                    <h4 id="dog-date">Mar 14 2022</h4>
                   </div>
                   <div class="AuctionActivity_colAlignCenter__3SaC2 col-lg-12">
                     <h1 class="AuctionActivityNounTitle_nounTitle__3_LLC" id="dog-title">Dog 0</h1><button
@@ -93,10 +93,10 @@
               </div>
               <div class="AuctionActivity_activityRow__1xuKY row">
                 <div class="col-lg-12">
-                  <p class="Bid_minBidCopy__1WI1j">Minimum bid: <span id="dog-min-bid">0.10</span> ETH</p>
+                  <p class="Bid_minBidCopy__1WI1j">Minimum bid: <span id="dog-min-bid">0.05</span> WETH</p>
                   <div class="input-group"><input aria-label="Example text with button addon"
                       aria-describedby="basic-addon1" min="0" type="number" class="Bid_bidInput__39un5 form-control"
-                      value=""><span class="Bid_customPlaceholder__3KOvn">ETH</span><button id="bid-button" disabled="" type="button"
+                      value=""><span class="Bid_customPlaceholder__3KOvn">WETH</span><button id="bid-button" disabled="" type="button"
                       class="Bid_bidBtn__2MzFj btn btn-primary">Approve</button></div>
                 </div>
               </div>
@@ -138,34 +138,34 @@
                 <div class="HistoryCollection_historyCollection__2Shui">
                   <img
                     src="/images/2.png"
-                    alt="Dog 2 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/3.png"
-                    alt="Dog 3 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/4.png"
-                    alt="Dog 4 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/5.png"
-                    alt="Dog 5 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/6.png"
-                    alt="Dog 6 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/7.png"
-                    alt="Dog 7 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/8.png"
-                    alt="Dog 8 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/9.png"
-                    alt="Dog 9 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/10.png"
-                    alt="Dog 10 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                   <img
                     src="/images/11.png"
-                    alt="Dog 11 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
+                    alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid">
                 </div>
               </div>
             </div>
@@ -178,21 +178,20 @@
             <div class="col-lg-10 offset-lg-1">
               <div class="Documentation_headerWrapper__xln_n">
                 <h1>Degen Dogs?</h1>
-                <p>Degen Dogs combine NFTs with DeFi. The degenerative art is inspired by <a href="https://www.larvalabs.com/cryptopunks" target="_blank">Cryptopunks</a>. The treasury aspect is inspired by <a href="https://nouns.wtf" target="_blank">Nouns</a>. The DeFi and money streams aim to explore a new community that collides the worlds of NFTs and DeFi into a new type of crypto dog off-leash park. Grab your Dog and join the Club.</p>
-                <p>Degen Dogs is a submission for the 2021 ETHOnline Hackathon, and is powered by Superfluid, Uniswap, Chainlink, Compound, DAI by Maker, and hosted on Skynet. The website (dapp) HTML and CSS are modified from Nounds DAO, as is the Auction House contract, which was itself modified from the Zora Auction House contract -- used under a GPL licence. Nouns is a very interesting project, <a href="https://nouns.wtf" target="_blank"></a>check it out</a>.</p>
+                <p>Planet Degen is dying. The inhabitants of the planet have neglected the environment and used up natural resources at an unsustainable rate for years. Climate change has caused coastal flooding, forests have become deserts, temperatures continue to rise, and air quality has become almost unbreathable.</p>
+                <p>Most species of life have suffered from mass extinction. The only known surviving inhabitants are 1,001 Dogs. But the Degen Dogs cannot survive for long on the surface. Their only hope is to descend, one-by-one, to the Canine Laboratory Underground Base, the CLUB. The only entrance to the Degen Dogs CLUB, deep below the planet's surface, is via an elevator that has space for only one Degen Dog at a time.</p>
+                <p>As time passes, more and more Degen Dogs will join the CLUB, forming a DAO (Dog Action Organization). Together the Degen Dogs must plan for the survival of the species. How to best use the limited supply of Dog Biscuits (BSCT) to sustain themselves? Can they develop tools and accessories to reverse climate change and heal the planet? Or should they develop spaceships and related technology, to embark on a space voyage in search of a new home? And could the rumors be true, that some of the Cats have managed to survive as well? Members of the Degen Dogs CLUB will have to decide where they go from here...</p>
+                <hr />
+                <p>Degen Dogs combine NFTs with DeFi. The degenerative art is inspired by <a href="https://www.larvalabs.com/cryptopunks" target="_blank">Cryptopunks</a>. The DAO and treasury is inspired by <a href="https://nouns.wtf" target="_blank">Nouns</a>. The DeFi and money streams aim to explore a new community that collides the worlds of NFTs and DeFi into a new type of crypto dog off-leash park. Grab your Dog and join the Club.</p>
+                <p>Degen Dogs was a finalist and winner at the 2021 ETHOnline Hackathon, and is powered by Superfluid, Uniswap, Idle Finance, Tally, and hosted on Skynet. The website (dapp) HTML and CSS are modified from Nounds DAO, as is the Auction House contract, which was itself modified from the Zora Auction House contract -- used under a GPL licence. Nouns is a very interesting project, <a href="https://nouns.wtf" target="_blank"></a>check it out</a>.</p>
               </div>
               <div class="accordion">
                 <div class="Documentation_card__1TWtt card">
-                  <div class="Documentation_cardHeader__xv_vO card-header">Daily Auctions</div>
+                  <div class="Documentation_cardHeader__xv_vO card-header">Auctions</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>The Dog Auction Contract will act as a self-sufficient noun generation and distribution
-                        mechanism, auctioning one noun every 24 hours, as long as there are dogs needing a new home.</p>
-                      <p>Each time an auction is settled, the settlement transaction will also cause a new dog to be
-                        minted and a new auction to begin. </p>
-                      <p>While settlement is most heavily incentivized for the winning bidder, it can be triggered by
-                        anyone, allowing the system to trustlessly auction dogs as long as Ethereum is operational and
-                        there are interested bidders.</p>
+                      <p>Degen Dogs are sold via auction, with only a single Dog being auction at any time. Auctions are held at https://degendogs.club. Bids are submitted on the Polygon network in WETH (Polygon Wrapped Ether). When each auction ends, the auction is settled and the Dog is transferred to the winning bidder.</p>
+                      <p>Auction details can be found <a href="https://docs.degendogs.club/basics/auctions" target="_blank"></a>here</a>.</p>
                     </div>
                   </div>
                 </div>
@@ -200,40 +199,39 @@
                   <div class="Documentation_cardHeader__xv_vO card-header">Dogs do DeFi?</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>Degen Dogs is an experiment that combines NFTs and DeFi. The proceeds of each auction are sent to the treasury. That's when the DeFi Dog magic starts:</p>
+                      <p>The WETH proceeds from Degen Dog auction are immediately and automatically invested in DeFi and start earning yield for Dog owners. The WETH is invested in the "Best Yield" vault on Idle Finance. Idle tokens representing the vault shares are issued to Degen Dogs contract. Distribution of proceeds is as follows:</p>
                       <ul>
-                        <li>The ETH from the winning bid is swapped on Uniswap for DAI</li>
-                        <li>The resulting DAI is then deposited in Compound Finance, and begins to earn yield</li>
-                        <li>A portion of the Compound tokens (cDAI) representing the deposits are then <em>upgraded</em> to "Super Tokens" in the Superfluid protocol.</li>
-                        <li>Then <strike>dog urine</strike> Super Tokens then begin <em>streaming</em> -- every second -- back to Dog owners:</li>
-                        <li>10% of of the proceeds of the auction stream back to the Dog Owner over the next 365 days. If the Dog is sold or transfered, the stream switches to the new owner.</li>
-                        <li>40% of the proceeds of each auction are <em>shared by all current Dog owners</em> and streamed to them over the next 365 days.</li>
-                        <li>20% of the proceeds for each auction go to the owner of the 10th Dog <em>before</em> this one. For example, 20% of the proceeds of the auction for Dog 11 will get streamed to the owner of Dog 1, over the next 365 days.</li>
-                        <li>In future, the Club may decide to change the DeFi investments and distributions in interesting ways.</li>
+                        <li>50% for the past, 50% for the future</li>
+                        <li>50% is streamed back to past Dog owners</li>
+                        <li>10% is immediately donated to a charitable DAO</li>
+                        <li>The remaining 40% goes to the treasury, where it is controlled by the DAO.</li>
                       </ul>
                       <p>Chew on that!</p>
                     </div>
                   </div>
                 </div>
                 <div class="Documentation_card__1TWtt card">
-                  <div id="dao" class="Documentation_cardHeader__xv_vO card-header">Dog DAO?</div>
+                  <div class="Documentation_cardHeader__xv_vO card-header">Ukraine Dog</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>Degen Dogs are currently on testnet. The plan for a mainnet launch would include a DAO to manage the Club and treasury. To start, this might be comprised of a small number of Dogfathers, with all Dog owners automatically joining the DAO. Bark if you want in.</p>
+                      <p>Degen Dog #1, the very first auction, will feature a special "Ukraine Dog" body trait, and will be the only Degen Dog with this trait. 100% of the proceeds of this auction will be donated to <a href="https://unchain.fund" target="_blank">Unchain Ukraine</a>. This special auction will last 72 hours.</p>
                     </div>
                   </div>
                 </div>
                 <div class="Documentation_card__1TWtt card">
-                  <div class="Documentation_cardHeader__xv_vO card-header">Dog Traits</div>
+                  <div class="Documentation_cardHeader__xv_vO card-header">BSCT Tokens</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>Degen Dogs are composed of multiple traits, including:</p>
-                      <ul>
-                        <li>bodies (tbd)</li>
-                        <li>accessories (tbd) </li>
-                        <li>headwear (tbd) </li>
-                        <li>glasses (tbd)</li>
-                      </ul>
+                      <p>Dog Biscuits -- BSCT tokens -- are ERC20 tokens issued to all bidders of Degen Dog auctions, including both unsuccessful and winning bidders.  BSCT tokens are issued at a ratio of 1000:1 based on the bid submitted.  For example, a bid of 1 WETH would result in 1000 BSCT tokens.</p>
+                      <p>More details can be found <a href="https://docs.degendogs.club/basics/dog-biscuits-bsct" target="_blank"></a>here</a>.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="Documentation_card__1TWtt card">
+                  <div id="dao" class="Documentation_cardHeader__xv_vO card-header">Degen Dog DAO</div>
+                  <div class="collapse">
+                    <div class="card-body">
+                      <p>Degen Dog owners are members of the DAO: one Dog equals one vote. DAO members control the treasury and decide the future of Degen Dogs. (<a href="https://docs.degendogs.club/dao/governance">more info</a>)</p>
                     </div>
                   </div>
                 </div>
@@ -241,30 +239,16 @@
                   <div class="Documentation_cardHeader__xv_vO card-header">Degenerative Artwork</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>Degen Dogs are dogs in the same spirit as the Cryptopunks. We call it <em>degenerative art</em>.</p>
-                      <p>Future dogs may be submitted and voted on by the club, with winning artists earning a cut. Stay tuned.</p>
+                      <p>The artwork for Degen Dogs was inspired by the pixel art of Cryptopunks. The degenerative art combines 12 Dog body types with various accessories such as glasses, hats, earrings, and more. Some traits are more <a href="https://docs.degendogs.club/nfts/rarities" target="_blank">rare</a> than others. There are 1,001 known Degen Dogs, each with a unique combination of traits.</p>
+                      <p>Degen Dogs artwork is licensed under a Creative Commons Attribution license (CC BY 4.0).</p>
                     </div>
                   </div>
                 </div>
                 <div class="Documentation_card__1TWtt card">
-                  <div class="Documentation_cardHeader__xv_vO card-header">Roadmap</div>
+                  <div class="Documentation_cardHeader__xv_vO card-header">Dog Docs</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>These Dogs are just getting started. Possible next steps and additonal features include:</p>
-                      <ul>
-                        <li>Gather a team!</li>
-                        <li>Gas cost optimizations</li>
-                        <li>Feature: every 52 days, a prize from the treasury earned by a random Dog owner.</li>
-                        <li>Feature: a pre-auction tool where artists can submit Dogs and the community can vote 
-                          on which Dogs are freed from the pound and minted to the collection (portion of proceeds 
-                          to artists).</li>
-                        <li>Explore other DeFi options (Aave, Balancer, Yearn, etc.)</li>
-                        <li>Explore and simulate incentivized tokenomics models</li>
-                        <li>Smart contract refinements to support fully decentralized operation</li>
-                        <li>DAO governance implementation</li>
-                        <li>Support for resale auctions in the dapp</li>
-                        <li>Mainnet launch!</li>
-                      </ul>
+                      <p>For even more information, check the <a href="https://docs.degendogs.club/" target="_blank">Degen Dog Docs</a>.</p>
                     </div>
                   </div>
                 </div>
@@ -280,8 +264,9 @@
             <footer class="Footer_footerSignature__3KHrj"><a class="Link_link__3euZY" href="https://discord.gg/vGnB539auu"
                 target="_blank" rel="noreferrer">discord</a><a class="Link_link__3euZY"
                 href="https://twitter.com/degendogsclub" target="_blank" rel="noreferrer">twitter</a><a
-                class="Link_link__3euZY" href="https://kovan.etherscan.io/address/0x8B231C8323E448152605B35BEb8c2498731C5D30"
-                target="_blank" rel="noreferrer">etherscan</a></footer>
+                class="Link_link__3euZY" href="https://polygonscan.com/address/"
+                target="_blank" rel="noreferrer">polygonscan</a><a class="Link_link__3euZY" href="https://docs.degendogs.club"
+                target="_blank">docs</a></footer>
           </div>
         </div>
       </div>
