--- a/dapp/index.html
+++ b/dapp/index.html
@@ -46,7 +46,7 @@
                 class="NavBar_nounsNavLink__1_qpP nav-link">YOU: <span id="account">0</span> idleWETHx</span>
               </a>
             </div>
-            <a href="#dao" id="dao-nav" class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a>
+            <a href="https://docs.degendogs.club/" id="dao-nav" class="NavBar_nounsNavLink__1_qpP nav-link">DOCS</a>
             <a href="#" class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
           </div>
         </div>
@@ -282,7 +282,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-  <script src="/js/abis.js?v=6"></script>
+  <script src="/js/abis.js?v=7"></script>
   <script src="/js/dapp.js?v=18"></script>
 
 </body>
