--- a/dapp/index.html
+++ b/dapp/index.html
@@ -7,10 +7,16 @@
   <link rel="icon" type="image/png" href="/images/0.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#000000">
-  <meta name="description"
-    content="Degen Dogs mix NFTs with DeFi.">
+  <meta name="description" content="Degen Dogs mix NFTs with DeFi.">
   <link rel="apple-touch-icon" href="/images/0.png">
   <link rel="manifest" href="/manifest.json">
+  <!--Open Graph tags-->
+  <meta property="og:url" content="https://degendogs.club" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Degen Dogs" />
+  <meta property="og:description" content="Degen Dogs are NFTs that stream DeFi tokens to holders. Receive a share of future proceeds." />
+  <meta property="og:image" content="/images/slide1.png" />
+  <!--END Open Graph tags-->
   <title>Degen Dogs Club</title>
   <style>
     @font-face {
@@ -36,7 +42,7 @@
           <div class="justify-content-end navbar-collapse collapse">
             <div class="nav-item">
               <a target="_blank" rel="noreferrer"
-                href="https://polygonscan.com/address/"
+                href="https://polygonscan.com/address/0xb6021d0b1e63596911f2cCeEF5c14f2db8f28Ce1"
                 class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> idleWETH</span>
               </a>
             </div>
@@ -264,7 +270,7 @@
             <footer class="Footer_footerSignature__3KHrj"><a class="Link_link__3euZY" href="https://discord.gg/vGnB539auu"
                 target="_blank" rel="noreferrer">discord</a><a class="Link_link__3euZY"
                 href="https://twitter.com/degendogsclub" target="_blank" rel="noreferrer">twitter</a><a
-                class="Link_link__3euZY" href="https://polygonscan.com/address/"
+                class="Link_link__3euZY" href="https://polygonscan.com/address/0xA920464B46548930bEfECcA5467860B2b4C2B5b9"
                 target="_blank" rel="noreferrer">polygonscan</a><a class="Link_link__3euZY" href="https://docs.degendogs.club"
                 target="_blank">docs</a></footer>
           </div>
@@ -283,7 +289,7 @@
   <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=7"></script>
-  <script src="/js/dapp.js?v=18"></script>
+  <script src="/js/dapp.js?v=19"></script>
 
 </body>
 
