--- a/dapp/index.html
+++ b/dapp/index.html
@@ -15,7 +15,14 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Degen Dogs" />
   <meta property="og:description" content="Degen Dogs are NFTs that stream DeFi tokens to holders. Receive a share of future proceeds." />
-  <meta property="og:image" content="/images/slide1.png" />
+  <meta property="og:image" content="https://degendogs.club/images/slide1.png" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@degendogsclub">
+  <meta name="twitter:creator" content="@mthacks">
+  <meta name="twitter:title" content="Degen Dogs">
+  <meta name="twitter:description" content="Degen Dogs are NFTs that stream DeFi tokens to holders. Receive a share of future proceeds.">
+  <meta name="twitter:image" content="https://degendogs.club/images/slide1.png">
+
   <!--END Open Graph tags-->
   <title>Degen Dogs Club</title>
   <style>
