--- a/dapp/index.html
+++ b/dapp/index.html
@@ -41,25 +41,31 @@
   <div id="root">
     <div class="App_wrapper__2Rh_f App_greyBg__2L290">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container"><a class="NavBar_navBarBrand__1hw3w navbar-brand" href="/"><img
+        <div class="container">
+          <a class="NavBar_navBarBrand__1hw3w navbar-brand" href="/"><img
               src="/images/192x192.png" width="85" height="85" class="d-inline-block align-middle"
-              alt="Degen Dogs Club logo"></a><button aria-controls="basic-navbar-nav" type="button"
+              alt="Degen Dogs Club logo"></a>
+          <button aria-controls="basic-navbar-nav" type="button"
             aria-label="Toggle navigation" class="navbar-toggler collapsed"><span
               class="navbar-toggler-icon"></span></button>
+          <a target="_blank" rel="noreferrer"
+          href="https://polygonscan.com/address/0xb6021d0b1e63596911f2cCeEF5c14f2db8f28Ce1"
+          class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> <img src="/images/idleWETH.png" alt="idleWETH" title="idleWETHx" style="height: 16px;"></span>
+          </a>
           <div class="justify-content-end navbar-collapse collapse">
-            <div class="nav-item">
-              <a target="_blank" rel="noreferrer"
-                href="https://polygonscan.com/address/0xb6021d0b1e63596911f2cCeEF5c14f2db8f28Ce1"
-                class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> idleWETH</span>
-              </a>
-            </div>
-            <div class="nav-item">
+            <a href="https://docs.degendogs.club/" id="dao-nav" class="NavBar_nounsNavLink__1_qpP nav-link">DOCS</a>
+            <div class="nav-item connected">
               <a target="_blank" rel="noreferrer"
                 href="https://app.superfluid.finance/dashboard"
-                class="NavBar_nounsNavLink__1_qpP nav-link">YOU: <span id="account">0</span> idleWETHx</span>
+                class="NavBar_nounsNavLink__1_qpP nav-link"><span id="account">0</span> <img src="/images/idleWETH.svg" alt="idleWETHx" title="idleWETHx" style="height: 16px;"></span>
               </a>
             </div>
-            <a href="https://docs.degendogs.club/" id="dao-nav" class="NavBar_nounsNavLink__1_qpP nav-link">DOCS</a>
+            <div class="nav-item connected">
+              <a target="_blank" rel="noreferrer" id="bsct-token"
+                href="#"
+                class="NavBar_nounsNavLink__1_qpP nav-link"><span id="bsct">0</span> <img src="/images/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
+              </a>
+            </div>
             <a href="#" class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
           </div>
         </div>
@@ -103,6 +109,7 @@
                     </h2>
                   </div>
                 </div>
+                <div class="AuctionActivity_activityRow__1xuKY row"><div class="AuctionActivity_fomoNounsLink__1DC-a col-lg-12"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="info-circle" class="svg-inline--fa fa-info-circle fa-w-16 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"></path></svg><a href="https://docs.degendogs.club/basics/donation#special-auction-ukraine-dog" target="_blank" rel="noreferrer">100% of Dog#1 proceeds go to 🇺🇦 Ukraine Relief</a></div></div>
               </div>
               <div class="AuctionActivity_activityRow__1xuKY row">
                 <div class="col-lg-12">
