--- a/dapp/index.html
+++ b/dapp/index.html
@@ -61,7 +61,7 @@
               </a>
             </div>
             <div class="nav-item connected">
-              <a target="_blank" rel="noreferrer" id="bsct-token"
+              <a rel="noreferrer" id="bsct-token"
                 href="#"
                 class="NavBar_nounsNavLink__1_qpP nav-link"><span id="bsct">0</span> <img src="/images/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
               </a>
