further ens tweaks

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="Auction_nounContentCol__1o5ER col-lg-6">
             <div class="Auction_nounWrapper__3JSNc"><img id="dog-image"
-                src="/images/dog-pi.png"
+                src="https://api.degendogs.club/images/1.png"
                 alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid"></div>
           </div>
           <div class="Auction_auctionActivityCol__3U2jw col-lg-6">
@@ -303,7 +303,7 @@
   <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=7"></script>
-  <script src="/js/dapp.js?v=21"></script>
+  <script src="/js/dapp.js?v=22"></script>
 
 </body>
 
