--- a/dapp/index.html
+++ b/dapp/index.html
@@ -32,7 +32,7 @@
     }
   </style>
   <link href="/css/bs.css" rel="stylesheet">
-  <link href="/css/styles.css" rel="stylesheet">
+  <link href="/css/styles.css?v=2" rel="stylesheet">
 </head>
 
 <body class="" style=""><noscript>You need to enable JavaScript to run this app.</noscript>
