--- a/dapp/index.html
+++ b/dapp/index.html
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="Auction_nounContentCol__1o5ER col-lg-6">
             <div class="Auction_nounWrapper__3JSNc"><img id="dog-image"
-                src="https://api.degendogs.club/images/1.png"
+                src="https://api.degendogs.club/images/2.png"
                 alt="Degen Dogs Club" class="Noun_img__1GJxo img-fluid"></div>
           </div>
           <div class="Auction_auctionActivityCol__3U2jw col-lg-6">
@@ -85,7 +85,7 @@
                     <h4 id="dog-date">Mar 14 2022</h4>
                   </div>
                   <div class="AuctionActivity_colAlignCenter__3SaC2 col-lg-12">
-                    <h1 class="AuctionActivityNounTitle_nounTitle__3_LLC" id="dog-title">Launching 3.14</h1><button
+                    <h1 class="AuctionActivityNounTitle_nounTitle__3_LLC" id="dog-title">Dog</h1><button
                       class="AuctionNavigation_leftArrow__1NOSB">←</button><button
                       class="AuctionNavigation_rightArrow__33rdI" disabled="">→</button>
                   </div>
