add idlewethx to metamask

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -57,13 +57,13 @@
             <div class="nav-item connected">
               <a target="_blank" rel="noreferrer"
                 href="https://app.superfluid.finance/dashboard"
-                class="NavBar_nounsNavLink__1_qpP nav-link"><span id="account">0</span> <img src="/images/idleWETH.svg" alt="idleWETHx" title="idleWETHx" style="height: 16px;"></span>
+                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="idleWETHx"><span id="account">0</span> <img src="/images/idleWETH.svg" alt="idleWETHx" title="idleWETHx" style="height: 16px;"></a></span>
               </a>
             </div>
             <div class="nav-item connected">
               <a rel="noreferrer" id="bsct-token"
                 href="#"
-                class="NavBar_nounsNavLink__1_qpP nav-link"><span id="bsct">0</span> <img src="/images/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
+                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="idleWETHx"><span id="bsct">0</span> <img src="/images/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
               </a>
             </div>
             <a href="#" class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
@@ -302,7 +302,7 @@
   <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=7"></script>
-  <script src="/js/dapp.js?v=31"></script>
+  <script src="/js/dapp.js?v=32"></script>
 
 </body>
 
