--- a/dapp/index.html
+++ b/dapp/index.html
@@ -143,7 +143,7 @@
             </div>
             <div class="col-lg-6">
               <div style="padding: 2rem;"><img
-                  src="/images/dog-pi.png"
+                  src="/images/1.png"
                   alt="noun" class="Noun_img__1GJxo img-fluid"></div>
             </div>
           </div>
