claim stream app function

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -32,7 +32,7 @@
     }
   </style>
   <link href="/css/bs.css" rel="stylesheet">
-  <link href="/css/styles.css?v=2" rel="stylesheet">
+  <link href="/css/styles.css?v=3" rel="stylesheet">
 </head>
 
 <body class="" style=""><noscript>You need to enable JavaScript to run this app.</noscript>
@@ -58,6 +58,13 @@
               <a target="_blank" rel="noreferrer"
                 href="https://app.superfluid.finance/dashboard"
                 class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="idleWETHx"><span id="account">0</span> <img src="/images/idleWETH.svg" alt="idleWETHx" title="idleWETHx" style="height: 16px;"></a></span>
+              </a>
+            </div>
+            <div class="nav-item connected" id="nav-claim">
+              <a 
+                href="#"
+                title="Streams available to claim!" 
+                class="NavBar_nounsNavLink__1_qpP nav-link claim btn btn-primary">CLAIM</a></span>
               </a>
             </div>
             <div class="nav-item connected">
@@ -302,7 +309,7 @@
   <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=7"></script>
-  <script src="/js/dapp.js?v=38"></script>
+  <script src="/js/dapp.js?v=39"></script>
 
 </body>
 
