--- a/dapp/index.html
+++ b/dapp/index.html
@@ -43,7 +43,7 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="NavBar_navBarBrand__1hw3w navbar-brand" href="/"><img
-              src="/images/192x192.png" width="85" height="85" class="d-inline-block align-middle"
+              src="/images/gm-dogs.png" width="85" height="85" class="d-inline-block align-middle"
               alt="Degen Dogs Club logo"></a>
           <button aria-controls="basic-navbar-nav" type="button"
             aria-label="Toggle navigation" class="navbar-toggler collapsed"><span
