fix for adding BSCT to Metamask

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -70,7 +70,7 @@
             <div class="nav-item connected">
               <a rel="noreferrer" id="bsct-token"
                 href="#"
-                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="idleWETHx"><span id="bsct">0</span> <img src="/images/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
+                class="NavBar_nounsNavLink__1_qpP nav-link add-to-metamask" data-token="BSCT"><span id="bsct">0</span> <img src="/images/BSCT.png" alt="BSCT" title="BSCT" style="height: 16px;"></span>
               </a>
             </div>
             <a href="#" class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
